--- a/css/main.css
+++ b/css/main.css
@@ -604,10 +604,6 @@ video {
   margin-top: 8rem;
 }
 
-.mt-16 {
-  margin-top: 4rem;
-}
-
 .mt-24 {
   margin-top: 6rem;
 }
@@ -694,12 +690,6 @@ video {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-y-6 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
 .rounded-full {
@@ -820,6 +810,26 @@ video {
   color: hsl(227 12% 61% / var(--tw-text-opacity));
 }
 
+.bg-volsOrange {
+  --tw-bg-opacity: 1;
+  background-color: hsl(31 100% 50% / var(--tw-bg-opacity));
+}
+
+.text-volsOrange {
+  --tw-text-opacity: 1;
+  color: hsl(31 100% 50% / var(--tw-text-opacity));
+}
+
+.hover\:bg-volsOrange:hover {
+  --tw-bg-opacity: 1;
+  background-color: hsl(31 100% 50% / var(--tw-bg-opacity));
+}
+
+.hover\:text-volsOrange:hover {
+  --tw-text-opacity: 1;
+  color: hsl(31 100% 50% / var(--tw-text-opacity));
+}
+
 @media (min-width: 768px) {
   .md\:mb-4 {
     margin-bottom: 1rem;
@@ -843,10 +853,6 @@ video {
 
   .md\:w-1\/3 {
     width: 33.333333%;
-  }
-
-  .md\:w-1 {
-    width: 0.25rem;
   }
 
   .md\:flex-row {
